<resources>
    <string name="tfi">One day all children will attain excellent education!</string>
    <string name="movement">JOIN THE MOVEMENT</string>
    <string name="app_name">TEACH FOR INDIA</string>
    <string name="volun">VOLUNTEER OPPORTUNITY</string>

    <string name="vo">CHECK VOLUNTEER OPPORTUNITY</string>
    <string name="ng">new_game</string>
    <string name="h">Help</string>
    <string name="sg">Add volunteer opportunity</string>


    <string name="title_activity_volunteer_opportunity">VolunteerOpportunity</string>

    <string name="title_text">Google Sign-In\nQuickstart</string>
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing inâ€¦</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loadingâ€¦</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="name">Name :</string>
    <string name="title_activity_gplus_fragment">GPlusFragment</string>
    <string name="title_activity_image_helper">ImageHelper</string>
    <string name="email">Email</string>
    <string name="opportunity_title">Opportunity Title</string>
    <string name="opportunity_des">Opportunity Description</string>
    <string name="Address">Address</string>
    <string name="School">School</string>
    <string name="Street">Street</string>
    <string name="City">City</string>
    <string name="Datet">Date/Time</string>
    <string name="Time">Time</string>
    <string name="submit">Submit</string>
    <string name="title_activity_opportunity">Opportunity</string>
    <string name="email_out">Email</string>
    <string name="opportunity_titleout">Opportunity Title</string>
    <string name="opportunity_des1_out">Opportunity Description</string>
    <string name="Address_out">Address</string>
    <string name="School_out">School</string>
    <string name="Street_out">Street</string>
    <string name="City_out">City</string>
    <string name="Location_out">Location</string>


</resources>
